Fix progress bar value overflow

--- a/ui/src/Components/CardList/Card.scss
+++ b/ui/src/Components/CardList/Card.scss
@@ -52,6 +52,7 @@
           position: absolute;
           left: 0;
           width: 0;
+          max-width: 100%;
           height: 4px;
           border-radius: 4px;
           transition: width 200ms ease-in-out;
