--- a/ui/src/Pages/Media/Index.scss
+++ b/ui/src/Pages/Media/Index.scss
@@ -159,6 +159,7 @@
               position: absolute;
               left: 0;
               width: 0;
+              max-width: 100%;
               height: 4px;
               border-radius: 4px;
               transition: width 200ms ease-in-out;
